add canonical url

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="style.css" type="text/css"/>
 <link rel="image_src" href="http://brianmacintosh.com/projects/iamthedestroyer/og_icon.png" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="canonical" href="https://www.brianmacintosh.com/projects/iamthedestroyer/"/>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
